--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hello-pangea/dnd": "^17.0.0",
+    "array-move": "^4.0.0",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.0",
+    "font-awesome": "^4.7.0",
+    "immer": "^10.1.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^2.10.377",
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
+    "react-rnd": "^10.4.13",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
