--- a/package.json
+++ b/package.json
@@ -3,22 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^17.0.0",
+    "@mui/material": "^6.4.1",
+    "@mui/x-data-grid": "^7.26.0",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@tanstack/react-table": "^8.20.6",
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-react": "^33.1.1",
     "array-move": "^4.0.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "fabric": "^6.5.4",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
     "immer": "^10.1.1",
+    "interactjs": "^1.10.27",
+    "konva": "^9.3.18",
+    "mongoose": "^8.9.4",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^2.10.377",
+    "pdf-table-extractor": "^1.0.3",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
+    "react-resizable-box": "^2.1.0",
     "react-rnd": "^10.4.13",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "tesseract.js": "^4.1.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -44,5 +66,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^33.3.1"
   }
 }
